# lzma-no-std-rs

./: Cargo.toml  README.md
benches/: lzma.rs
src/: error.rs  io.rs  io_ext.rs  lib.rs  macros.rs
src/decode/: lzbuffer.rs  lzma.rs  lzma2.rs  mod.rs  options.rs  rangecoder.rs  stream.rs  util.rs  xz.rs
src/encode/: dumbencoder.rs  lzma2.rs  mod.rs  rangecoder.rs  util.rs  xz.rs
src/io/: cursor.rs
src/xz/: header.rs  mod.rs
tests/: lzma.rs
tests/files/: foo.txt.lzma  hugedict.txt.lzma  range-coder-edge-case.lzma
