[package]
name = "lzma-rs"
description = "A codec for LZMA, LZMA2 and XZ written in pure Rust"
version = "0.2.0"
license = "MIT"
authors = ["Guillaume Endignoux <ggendx@gmail.com>"]
repository = "https://github.com/gendx/lzma-rs"
readme = "README.md"
categories = ["compression"]
keywords = ["lzma", "compression", "decompression"]
exclude = ["tests/*", "benches/*", "fuzz/*", ".github/*", "Cargo.lock"]
edition = "2018"

[dependencies]
byteorder = { version = "^1.0.0", default-features = false }
crc = { version = "^1.0.0", default-features = false }
heapless = { version = "^0.7.9" }
core2 = { path = "../core2", version = "^0.3.2", default-features = false }
log = { version = "^0.4.14", optional = true }
env_logger = { version = "^0.8.3", optional = true }

[dev-dependencies]
rust-lzma = "0.5"

[features]
default = ["std"]
std = ["core2/std"]
enable_logging = ["std", "env_logger", "log"]
stream = ["std"]

[package.metadata.docs.rs]
features = ["stream"]
